consertando texto do html e adicionando root no css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="alerta">
                 <img src="assents/alerta.jpg" class="alerta_imagem" height="16px">
-                <label for="text_input" class="alerta_texto">Apenas letras minusculas e sem acento</label>
+                <label for="text_input" class="alerta_texto">Apenas letras minúsculas e sem acento</label>
             </div>
 
             <div class="botoes">
